@@ -11,6 +11,8 @@ module Jabber
   # The presence class is used to construct presence messages to 
   # send to the Jabber service.
   class Presence < XMLStanza
+    include Comparable
+
     ##
     # Create presence stanza
     # show:: [String] Initial Availability Status
@@ -184,7 +186,7 @@ module Jabber
     end
 
     ##
-    # Get presence priority, or 0 if absent
+    # Get presence priority, or nil if absent
     # result:: [Integer]
     def priority
       e = first_element_text('priority')
@@ -216,5 +218,42 @@ module Jabber
       self.priority = val
       self
     end
+
+    ##
+    # Compare two presences using priority.
+    def <=>(o)
+      if priority.nil?
+        if o.priority.nil?
+          return 0
+        else
+          return 1
+        end
+      elsif o.priority.nil?
+        return -1
+      else
+        return priority <=> o.priority
+      end
+    end
+
+    ##
+    # Compare two presences. The most suitable to talk with is the
+    # biggest.
+    PRESENCE_STATUS = { :chat => 4, nil => 3, :dnd => 2, :away => 1, :xa => 0 }
+    def cmp_interest(o)
+      if type.nil?
+        if o.type.nil?
+          # both available.
+          PRESENCE_STATUS[show] <=> PRESENCE_STATUS[o.show]
+        else
+          return -1
+        end
+      elsif o.type.nil?
+        return 1
+      else
+        # both are non-nil. We consider this is equal.
+        return 0
+      end
+    end
+
   end
 end
