@@ -2,4 +2,4 @@ xmpp4r (0.1-1) unstable; urgency=low
 
   * First Debian package.
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Mon, 06 Sep 2005 19:07:13 +0200
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 21 Sep 2005 09:07:13 +0200
